2022-03-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCast.c,
	  src/SDCCsymt.c,
	  support/regression/tests/widebitintbitfield.c:
	  _BitInt promotion fix.

2022-03-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCast.c,
	  support/regression/tests/bug-3372.c:
	  Fix bug #3372.
	* src/SDCCsymt.c:
	  Improve debug output for bit-fields.

2022-03-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/as8xcxxx/ds8adr.c,
	  sdas/as8xcxxx/ds8mch.c:
	  Merge error messages from upstream ASxxxx 5.40.

2022-03-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/as8xcxxx/ds8pst.c,
	  sdas/aspdk13/pdk13pst.c,
	  sdas/aspdk14/pdk14pst.c,
	  sdas/aspdk15/pdk15pst.c,
	  sdas/aspdk16/pdk16pst.c,
	  sdas/asrab/rabpst.c,
	  sdas/asstm8/stm8pst.c,
	  sdas/astlcs90/t90pst.c,
	  sdas/asz80/z80pst.c:
	  Enable .incbin for all targets.

2022-03-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/widebitintbitfield.c:
	  Disable a test that had been accidentially enabled even for ports where the feature is not supported.

2022-03-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/as8051/i51adr.c,
	  sdas/as8051/i51mch.c,
	  sdas/as8051/i51pst.c:
	  Merge error messages from upstream ASxxxx 5.40.

2022-03-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asz80/z80.h:
	  Fix .allow_undocumented for z80 [bugs:#3275].

2022-03-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asxxsrc/assubr.c:
	  Fix detailed error messages in sdas.

2022-03-23 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bitint.c,
	  support/regression/tests/bitintarith.c,
	  support/regression/tests/bitintbitfield.c,
	  support/regression/tests/bitintvararg.c,
	  support/regression/tests/widebitintbitfield.c:
	  Enable some tests for bit-precise integers on clang 11 host.

2022-03-22 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>
